--- a/frontend/dadding/.gitignore
+++ b/frontend/dadding/.gitignore
@@ -41,3 +41,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+.DS_Store
+firebase_options.dart
+GoogleService-Info.plist
+firebase.json
