--- a/frontend/dadding/pubspec.yaml
+++ b/frontend/dadding/pubspec.yaml
@@ -7,11 +7,15 @@ environment:
   sdk: ^3.5.1
 
 dependencies:
+  firebase_auth: ^5.3.3
+  firebase_core: ^3.8.0
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
   flutter_svg: ^2.0.10+1
   get: ^4.6.6
+  google_sign_in: ^6.2.2
+  image_picker: ^1.1.2
     
 dev_dependencies:
   flutter_test:
