--- a/frontend/dadding/pubspec.yaml
+++ b/frontend/dadding/pubspec.yaml
@@ -11,11 +11,14 @@ dependencies:
   firebase_core: ^3.8.0
   flutter:
     sdk: flutter
-  flutter_dotenv: ^5.1.0
+  flutter_localizations:
+    sdk: flutter
+  flutter_dotenv: ^5.2.1
   flutter_svg: ^2.0.10+1
   get: ^4.6.6
   google_sign_in: ^6.2.2
   image_picker: ^1.1.2
+  intl: ^0.19.0
     
 dev_dependencies:
   flutter_test:
@@ -26,6 +29,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icons/
+    - assets/config/.env
   fonts:
     - family: Pretendard
       fonts:
